--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,6 @@
-url=http://localhost/
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=C:\\xampp\\htdocs\\JE_Grdf
+index.file=src/Grdf/FrontOfficeBundle/Resources/views/Security/login.html.twig
+run.as=LOCAL
+url=http://localhost/JE_Grdf/
